[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/CutScenes/Start_CutScene.gd" type="Script" id=1]
[ext_resource path="res://assets/Game menu assets/Bakgrunn.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Portal/Portal_1.png" type="Texture" id=4]
[ext_resource path="res://src/Actors/Intro_CutScene.gd" type="Script" id=5]
[ext_resource path="res://assets/Wizzard/Wizzard.png" type="Texture" id=6]
[ext_resource path="res://assets/Game menu Fonts/expressway rg.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/AutoLoad/PlayerData.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Levels/Tutorial.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1236.87, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 167.097 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.1677, 230.574 )

[node name="Start_CutScene" type="Node2D"]
script = ExtResource( 1 )
next_scene = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1157.04, 413.359 )
scale = Vector2( 1.5, 1.5 )
z_index = -5
texture = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 932.667, 933.499 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 194.316, 823.79 )
scale = Vector2( 1, 1 )
script = ExtResource( 5 )
speed = Vector2( 300, 1000 )
gravity = 3000.0
CutScene_speed = 1

[node name="Portal_fake" type="Sprite" parent="."]
position = Vector2( 78.4542, 778.158 )
scale = Vector2( 0.611329, 0.611329 )
z_index = -1
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 836.539, 763.139 )
shape = SubResource( 2 )

[node name="Wizzard" type="Sprite" parent="."]
position = Vector2( 1061.89, 828.79 )
scale = Vector2( -0.144215, 0.151104 )
z_index = -1
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
visible = false
margin_left = 1107.87
margin_top = 611.0
margin_right = 1395.87
margin_bottom = 703.0
custom_fonts/font = SubResource( 3 )
text = "Welcome to Box puzzle!
Your goal is pass all the levels,
 and reach the cake"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Label"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
show_behind_parent = true
margin_left = -13.0
margin_top = -8.0
margin_right = 307.0
margin_bottom = 94.0
texture = SubResource( 4 )

[node name="Label2" type="Label" parent="Control"]
visible = false
margin_left = 1107.87
margin_top = 611.0
margin_right = 1395.87
margin_bottom = 703.0
custom_fonts/font = SubResource( 3 )
text = "But watch out for the dangerous
 crow! 
I hear it is also looking for the cake!"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Label2"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
show_behind_parent = true
margin_left = -13.0
margin_top = -8.0
margin_right = 338.0
margin_bottom = 94.0
texture = SubResource( 4 )

[node name="Label3" type="Label" parent="Control"]
visible = false
margin_left = 1107.87
margin_top = 611.0
margin_right = 1395.87
margin_bottom = 703.0
custom_fonts/font = SubResource( 3 )
text = "Hurry!
You need to reach the cake before
the crow! No time to lose"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Label3"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
show_behind_parent = true
margin_left = -13.0
margin_top = -8.0
margin_right = 330.0
margin_bottom = 94.0
texture = SubResource( 4 )

[node name="PlayerData" parent="." instance=ExtResource( 8 )]

[node name="PortalToNextLevel" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalToNextLevel"]
position = Vector2( 2058.65, 711.323 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PortalToNextLevel" to="." method="_on_PortalToNextLevel_body_entered"]
